kubernetes/development/api-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: api-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
spec:
  selector:
    matchLabels:
      app: api-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: api-backend
    spec:
      containers:
        - name: api-backend
          image: martynpi/api-backend:3.0.0
          ports:
            - containerPort: 8080
