kubernetes/development/api-tests.yml
apiVersion: v1
kind: Service
metadata:
  name: api-tests
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-tests
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-tests
spec:
  selector:
    matchLabels:
      app: api-tests
  replicas: 1
  template:
    metadata:
      labels:
        app: api-tests
    spec:
      containers:
        - name: api-tests
          image: martynpi/api-tests:5.0.0
          ports:
            - containerPort: 8080
