kubernetes/development/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    ingress.kubernetes.io/add-base-url: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api-backend/
            backend:
              serviceName: api-backend
              servicePort: 8080
          - path: /api-frontend/
            backend:
              serviceName: api-frontend
              servicePort: 8080
          - path: /api-tests/
            backend:
              serviceName: api-tests
              servicePort: 8080
